2007-10-06 Samuel Abels <http://debain.org>

	* lib/Exscript/stdlib/Connection/wait_for.py: New builtin function.
	* lib/Exscript/ExpressionNode.py: Decreased priority of the "not" operator.

2007-10-05 Samuel Abels <http://debain.org>

	* exscript.py: Added --no-prompt switch.

2007-10-31 Samuel Abels <http://debain.org>

	* exscript.py: Added -a and -n switches.
	* lib/FooLib/Interact.py: get_user(): New.
	* lib/TerminalConnection/*.py: Add support for Huawei routers.
	* lib/TerminalConnection/Transport.py: Improved prompt matching.

2007-10-02 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/telnetlib.py: Speed up prompt matching by only
	searching through the last 40 bytes in the buffer. This also limits the
	maximum prompt length to 40 characters.
	* lib/Exscript/stdlib/Device/vendor.py: Improved Cisco router detection.

2007-09-27 Samuel Abels <http://debain.org>

	* lib/Exscript/Code.py, lib/Exscript/Exscript.py: Support windows newlines.
	* exscript.py: Added a --version flag.

2007-09-26 Samuel Abels <http://debain.org>

	* lib/Exscript/ExpressionNode.py: Fix: Arithmetic operations with 0 no
	longer fail.
	* lib/Exscript/Loop.py: Fix: "while" and "until" loops would not always
	work.
	* lib/Exscript/Extract.py: Added support for the "from" keyword.
	* lib/Exscript/Regex.py: Fix: Escaping '/' would not work.
	* lib/Exscript/Code.py: Fix the "is not" operator.
	* Release 0.9.10

2007-09-25 Samuel Abels <http://debain.org>

	* Release 0.9.9

2007-09-24 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/SSH.py: The SSH adapter now automatically removes
	control characters from the data stream.

2007-09-23 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Greatly improved the error handling of the parser.
	* lib/Exscript/Extract.py, lib/Exscript/Regex.py: Detect whether the correct
	number of match groups is used in a regular expression.
	* lib/Exscript/Execute.py, lib/Exscript/TerminalConnection/*.py: Moved the