@@ -9,4 +9,4 @@ def execute(scope, force = None):
         util.update_host_info(scope, 0)
     elif force[0] == 1:
         util.update_host_info(scope, 1)
-    return [conn.remote_info['vendor']]
+    return [conn.remote_info['os']]
